juno/qa/apps/ferload/certificate-bundle-overrides.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ferload
spec:
  template:
    spec:
      volumes:
        - name: ingress-ca-certificate
          secret:
            secretName: cqdg-ingress-ca-certificate
            defaultMode: 0555
        - name: opensearch-ca-cert
          secret:
            secretName: opensearch-ca-certificate
            defaultMode: 0555
        - name: ca-bundle
          emptyDir: {}
