juno/qa/apps/ferload/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ferload
  annotations:
    secret.reloader.stakater.com/reload: "keycloak-client-resource-server-credentials"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ferload
  template:
    metadata:
      labels:
        app: ferload
    spec:
      volumes:
      - name: ingress-ca-certificate
        secret:
          secretName: cqdg-ingress-ca-certificate
          defaultMode: 0555
      - name: entrypoint
        configMap:
          name: ferload-entrypoint
          defaultMode: 0555
      containers:
      - image: index.docker.io/ferlabcrsj/ferload:1c104095dd28131ced1744a3c4485a1944b75319-1708638949 # {"$imagepolicy": "cqdg-qa-fluxcd:ferload"}
        name: ferload
        command: ["/opt/entrypoint/entrypoint.sh"]
        volumeMounts:
        - name: ingress-ca-certificate
          mountPath: /opt/ingress-ca
          readOnly: true
        - name: entrypoint
          mountPath: /opt/entrypoint
        resources:
          requests:
            memory: "2048Mi"
            cpu: '2'
          limits:
            memory: "4096Mi"
            cpu: '2'
