juno/qa/apps/ferload/dns-overrides.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arranger
spec:
  template:
    spec:
      volumes:
        - name: corefile
          configMap:
            name: coredns-zonefiles-corefile
            defaultMode: 0444
        - name: zonefile
          configMap:
            name: qa-domain-zonefile
            defaultMode: 0444
        - name: zonefile-copy
          emptyDir: {}
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 127.0.0.1
        searches:
          - search
          - cqdg-qa.svc.cluster.qa.cqdg
          - svc.cluster.qa.cqdg
          - cluster.qa.cqdg
          - juno
        options:
          - name: ndots
            value: "5"
      containers:
        - name: coredns
          image: ferlabcrsj/coredns:1.1.1
          command: ["/coredns"]
          args: ["-conf", "/opt/corefile/Corefile"]
          volumeMounts:
            - name: corefile
              mountPath: /opt/corefile
              readOnly: true
            - name: zonefile-copy
              mountPath: /opt/zonefiles
              readOnly: true
