juno/qa/apps/ferload/services.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ferload
  name: ferload
spec:
  ports:
    - port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    app: ferload
