juno/qa/apps/ferload/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ferload
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - ferload.qa.juno.cqdg.ferlab.bio
      secretName: cqdg-ingress-certificate
  rules:
    - host: ferload.qa.juno.cqdg.ferlab.bio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ferload
                port:
                  number: 9090
